GNOME Bugzilla – Bug 733146
spawn helper does not use correctly the parameters
Last modified: 2014-07-14 12:43:40 UTC
Created attachment 280622 [details] [review] spawn-win32 So it seems that we can't rely on the __argc and __argv global vars since we are getting unicode values and sometimes I guess windows gets confused and sets those global vars in the wrong way. Instead let's get the unicode ones and convert them to uft-8 and use the utf-8 ones. This seems to fix a crash when compiling gtk+, which uses the GSubprocess magic to compile the resources.
Created attachment 280628 [details] [review] spawn-win32 V2 Minor fix
Review of attachment 280628 [details] [review]: Code looks OK. If it passes tests, it should be good.